--- a/style.css
+++ b/style.css
@@ -68,6 +68,25 @@
     height: auto;
 }
 
+.promotion-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid black;
+    padding: 20px;
+    z-index: 1000;
+    display: flex;
+    gap: 10px;
+}
+
+    .promotion-modal button {
+        padding: 10px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
 @media (min-width:600px) {
     .chessBoard {
         width: 600px;
