--- a/style.css
+++ b/style.css
@@ -212,14 +212,42 @@
     padding: 10px;
     background: white;
     margin-right: 20px;
-    scroll-behavior: smooth; /* Enables smooth scrolling */
+    scroll-behavior: smooth;
 }
 
+.history-box {
+    width: 200px;
+    height: 400px;
+    overflow-y: auto;
+    border: 1px solid black;
+    padding: 10px;
+    background: #f9f9f9;
+    border-radius: 8px;
+    padding: 15px;
+}
+
+#moveHistory p {
+    font-size: 14px;
+    padding: 5px;
+    margin: 5px 0;
+    border-radius: 5px;
+    background: #ffffff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+}
 
 @media (min-width:600px) {
     .chessBoard {
         width: 600px;
         height: 600px;
+        position: relative;
+        right: 180px;
+    }
+
+    .history-box {
+        right: 400px;
+        position: relative;
+        top: 25px;
+        height: 410px;
     }
 }
 
@@ -250,7 +278,7 @@
         font-size: 15px;
         transition: all 0.5s ease;
         position: absolute;
-        left: 750px;
+        left: 850px;
         top: 50px;
     }
 
@@ -267,7 +295,7 @@
         font-size: 15px;
         transition: all 0.5s ease;
         position: absolute;
-        left: 750px;
+        left: 850px;
         top: 120px;
     }
 
@@ -284,7 +312,7 @@
         font-size: 15px;
         transition: all 0.5s ease;
         position: absolute;
-        left: 750px;
+        left: 850px;
         top: 190px;
     }
 }
